2006-03-20  Eric Seidel  <eseidel@apple.com>

        Reviewed by adele & ggaren.

        Modified test case to cover crasher:
         <rdar://problem/4480571> Safari crashed at exit at KXMLCore::deleteAllValues + 24

        * plugins/plugin-javascript-access.html:

2006-03-20  Eric Seidel  <eseidel@apple.com>

        Reviewed by justing.

        Re-enable previously failing test.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6560

        * dom/xhtml/level2/html/HTMLIFrameElement11.xhtml: Added.
        * dom/xhtml/level2/html/HTMLIFrameElement11.xhtml-disabled: Removed.

2006-03-20  Beth Dakin  <bdakin@apple.com>

        Reviewed by Adele

        I added a close comment tag to this layout test so that the layout 
        would not longer be affected by the unclosed <style> tag bug since 
        that is not the original aim of this test anyway.

        * tables/mozilla/bugs/bug43854-2-expected.checksum:
        * tables/mozilla/bugs/bug43854-2-expected.png:
        * tables/mozilla/bugs/bug43854-2-expected.txt:
        * tables/mozilla/bugs/bug43854-2.html:

2006-03-20  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Darin.

        - http://bugzilla.opendarwin.org/show_bug.cgi?id=3439
         mouseover effects can get stuck sometimes due to missing events
        - http://bugzilla.opendarwin.org/show_bug.cgi?id=5764
         DIV mouseOver and mouseOut triggered too often
        - http://bugzilla.opendarwin.org/show_bug.cgi?id=7701
         mouseout sent to the wrong element when layout changes simultaneously

        * fast/events/mouseover-mouseout-expected.txt: Added.
        * fast/events/mouseover-mouseout.html: Added.
        * fast/events/mouseover-mouseout2-expected.txt: Added.
        * fast/events/mouseover-mouseout2.html: Added.

2006-03-20  Beth Dakin  <bdakin@apple.com>

        Reviewed by Adele

        Updating pixel results for a few tables tests that have changed 