@@ -192,6 +192,9 @@ bool EventTargetNode::dispatchGenericEvent(PassRefPtr<Event> e, ExceptionCode&, 
     if (!evt->propagationStopped()) {
         evt->setEventPhase(Event::AT_TARGET);
         evt->setCurrentTarget(it.current());
+
+        if (!evt->propagationStopped())
+            EventTargetNodeCast(it.current())->handleLocalEvents(evt.get(), true);
         
         if (!evt->propagationStopped())
             EventTargetNodeCast(it.current())->handleLocalEvents(evt.get(), false);
